force-app/main/default/objects/TrueDialog_Keys__c/TrueDialog_Keys__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TrueDialog Keys</label>
</CustomObject>