force-app/main/default/objects/TrueDialog_Keys__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <length>70</length>
    <type>Text</type>
</CustomField>