force-app/main/default/objects/TrueDialog_Keys__c/fields/Batch_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Batch_Notification_Email__c</fullName>
    <label>Batch Notification Email</label>
    <type>Email</type>
</CustomField>