force-app/main/default/objects/TrueDialog_Keys__c/fields/Callback_Token__c.field-meta.xml
<CustomField>
    <fullName>Callback_Token__c</fullName>
    <label>Callback Token</label>
    <length>60</length>
    <type>Text</type>
</CustomField>