force-app/main/default/objects/TrueDialog_Keys__c/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <label>Channel Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>