force-app/main/default/objects/TrueDialog_Keys__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>