force-app/main/default/objects/TrueDialog_Keys__c/fields/Contact_Insert_From_File__c.field-meta.xml
<CustomField>
    <fullName>Contact_Insert_From_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Insert From File</label>
    <type>Checkbox</type>
</CustomField>