force-app/main/default/objects/TrueDialog_Keys__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <label>Document URL</label>
    <length>120</length>
    <type>Text</type>
</CustomField>